// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`As a user I want to have a button should allow additional classes 1`] = `
<div>
  <button
    class="es--btn es--btn--secondary custom custom2"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`As a user I want to have a button should allow custom content 1`] = `
<div>
  <button
    class="es--btn es--btn--secondary "
    type="button"
  >
    button test
  </button>
</div>
`;

exports[`As a user I want to have a button should render a primary button 1`] = `
<div>
  <button
    class="es--btn es--btn--primary "
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`As a user I want to have a button should render a secondary button 1`] = `
<div>
  <button
    class="es--btn es--btn--secondary "
    type="button"
  >
    Button
  </button>
</div>
`;
